--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 torch
 torchtext
 torchvision
-git+git://github.com/cyyever/naive_python_lib@main#egg=cyy_naive_lib
+git+ssh://git@github.com/cyyever/naive_python_lib.git@main#egg=cyy_naive_lib
