--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ torch
 torchtext
 torchvision
 ssd-checker
+transformers
+datasets
 git+ssh://git@github.com/cyyever/naive_python_lib.git@main#egg=cyy_naive_lib
