Apply ruff checks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,3 +25,23 @@ defineConstant = { DEBUG = true }
 
 reportMissingImports = true
 reportMissingTypeStubs = false
+
+[tool.ruff]
+target-version = "py312"
+src = ["cyy_torch_toolbox"]
+
+[tool.ruff.lint]
+select = [
+    # pycodestyle
+    "E",
+    # Pyflakes
+    "F",
+    # pyupgrade
+    "UP",
+    # flake8-bugbear
+    "B",
+    # flake8-simplify
+    "SIM",
+    # isort
+    "I",
+]
