--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 torch>=2.5
-nvidia-ml-py
 hydra-core
 omegaconf
 torchmetrics
 pynvml
-git+ssh://git@github.com/cyyever/naive_python_lib.git@main#egg=cyy_naive_lib
+cyy_naive_lib@git+ssh://git@github.com/cyyever/naive_python_lib.git@main
