--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
   "nvidia-ml-py",
   "dill",
   "cyy_naive_lib@git+https://github.com/cyyever/naive_python_lib.git@main",
+  "cyy_preprocessing_pipeline@git+https://github.com/cyyever/preprocessing_pipeline.git@main",
 ]
 
 [tool.setuptools.package-data]
