--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,38 +1,32 @@
-[build-system]
-requires = ["setuptools >= 63.0"]
-build-backend = "setuptools.build_meta"
-
 [project]
 name = "cyy_torch_toolbox"
 version = "0.2"
+readme = { file = "README.md", content-type = "text/markdown" }
 requires-python = ">=3.12"
-readme = {file = "README.md", content-type = "text/markdown"}
+license = { text = "BSD License" }
 authors = [
-  {name = "cyy", email = "cyyever@outlook.com"},
+  { name = "cyy", email = "cyyever@outlook.com" },
 ]
-license = {text = "BSD License"}
-classifiers = [
-  "Programming Language :: Python"
-]
-
+classifiers = ["Programming Language :: Python"]
 dependencies = [
-  "torch>=2.8",
-  "hydra-core",
-  "omegaconf",
-  "torchmetrics",
-  "torchvision",
-  "datasets",
-  "nvidia-ml-py",
-  "dill",
   "cyy_naive_lib@git+https://github.com/cyyever/naive_python_lib.git@main",
   "cyy_preprocessing_pipeline@git+https://github.com/cyyever/preprocessing_pipeline.git@main",
+  "datasets",
+  "dill",
+  "hydra-core",
+  "nvidia-ml-py",
+  "omegaconf",
+  "torch>=2.8",
+  "torchmetrics",
+  "torchvision",
 ]
-
-[tool.setuptools.package-data]
-cyy_torch_toolbox = ["py.typed"]
 
 [project.urls]
 Repository = "https://github.com/cyyever/torch_toolbox"
+
+[build-system]
+requires = ["setuptools >= 63.0"]
+build-backend = "setuptools.build_meta"
 
 [tool.ruff]
 target-version = "py312"
@@ -40,20 +34,23 @@ src = ["cyy_torch_toolbox"]
 
 [tool.ruff.lint]
 select = [
-    # pycodestyle
-    "E",
-    # Pyflakes
-    "F",
-    # pyupgrade
-    "UP",
-    # flake8-bugbear
-    "B",
-    # flake8-simplify
-    "SIM",
-    # isort
-    "I",
-    "RUF",
-    "RET"
+  # pycodestyle
+  "E",
+  # Pyflakes
+  "F",
+  # pyupgrade
+  "UP",
+  # flake8-bugbear
+  "B",
+  # flake8-simplify
+  "SIM",
+  # isort
+  "I",
+  "RUF",
+  "RET",
+  "PIE"
 ]
+ignore = ["E501", "F403", "RUF017"]
 
-ignore = ["E501","F403"]
+[tool.setuptools.package-data]
+cyy_torch_toolbox = ["py.typed"]
