--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
   "hydra-core",
   "nvidia-ml-py",
   "omegaconf",
-  "torch>=2.8",
+  "torch>=2.10",
   "torchmetrics",
   "torchvision",
 ]
@@ -27,6 +27,22 @@ Repository = "https://github.com/cyyever/torch_toolbox"
 [build-system]
 requires = ["setuptools >= 63.0"]
 build-backend = "setuptools.build_meta"
+
+[tool.uv.sources]
+torch = [
+  { index = "pytorch-cu130", marker = "sys_platform == 'win32'" },
+]
+torchvision = [
+  { index = "pytorch-cu130", marker = "sys_platform == 'win32'" },
+]
+
+[[tool.uv.index]]
+name = "pytorch-cu130"
+url = "https://download.pytorch.org/whl/cu130"
+explicit = true
+
+[tool.uv.pip]
+extra-index-url = ["https://download.pytorch.org/whl/cu130"]
 
 [tool.ruff]
 target-version = "py312"
